# OpenMP

./: CMakeLists.txt
BucketSort/: CMakeLists.txt  main.c  mainB.c  mainK.c  numbers.csv  times.ods
BucketSort/printscreens/: machine.txt
GeneratingRandom/: CMakeLists.txt  main.c  sequential.csv  times.csv  visual.ipynb  wnioski.txt
